fix: cleaned up UpdateConsumer